# cpp_agent

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile_flags.txt  run.sh
include/: base_wrapper.hpp  benchmark_wrapper.hpp  optimized_wrapper.hpp  utils.hpp
py_inference/: benchmark.py  requirements.txt  visualize.ipynb
py_inference/benchmark_results/: benchmark_results_20241105_193833.csv  benchmark_results_20241105_223409.csv  benchmark_results_20241106_004321.csv
src/: base_wrapper.cpp  benchmark_wrapper.cpp  main.cpp  optimized_wrapper.cpp  utils.cpp
tests/: test_llamaCpp_setup.cpp
